update schema